# ComfyUI-Lora-Manager

./: .gitignore  AGENTS.md  BUILD_WORKFLOW_IMPLEMENTATION.md  BUILD_WORKFLOW_SOLUTIONS.md  CLAUDE.md  CUSTOM_CHANGES.md  GEMINI.md  IFLOW.md  METADATA_PROVIDER_REFACTOR_SUMMARY.md  MIGRATION_STATUS.md  QUICK_REFERENCE.md  README.md  VUE_WIDGETS_SETUP.md  __init__.py  config.py  i18n_migration_summary.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  settings.json.example  standalone.py  test_i18n.py  update_logs.md  verify_architecture.py  verify_architecture_simple.py  vitest.config.js
.docs/: batch-import-design.md
.github/: FUNDING.yml  copilot-instructions.md
.specs/: metadata.schema.json
batch_import_feature_package/: README.md  install_batch_import.py
data/: supporters.json
docs/: DeploymentGuide.md  EventManagementImplementation.md  EventManagerDocs.md  LM-Extension-Wiki.md  LORA_CYCLER.md  MigrationGuide.md  agent_skills.md  comfyui-dual-mode-widgets.md  custom_priority_tags_format.md  dom_widget_dev_guide.md  frontend-dom-fixtures.md  frontend-filtering-test-matrix.md  frontend-testing-roadmap.md  i18n-implementation-summary.md  i18n-improvements-summary.md  i18n.md  library-switching.md  metadata-json-schema.md  priority_tags_help.md  server-side-i18n-implementation.md
example_workflows/: Lora Manager Basic.json  Lora Randomizer.json  Lora_Cycler.json  Lora_Manager_Basic.json  Lora_Randomizer.json
examples/: new_architecture_usage.py
locales/: de.json  en.json  es.json  fr.json  (+6 more)
(+826 files in other folders)
